2024-XX-XX   3.1.0:
-------------------
  * allow mask assignment to bitarrays, see #225
  * add missing masked operations to pyi-file
  * fix some typos
  * minor simplifications
  * update gene example
  * add comments


2024-10-15   3.0.0:
-------------------
  * see [Bitarray 3 transition](bitarray3.rst)
  * remove Python 2.7 support
  * `.decode()` now returns iterator (equivalent to past `.iterdecode()`)
  * `.search()` now returns iterator (equivalent to past `.itersearch()`)
  * remove `.iterdecode()` and `.itersearch()`
  * remove `util.rindex()`, use `.index(..., right=1)` instead,
    deprecated since 2.9
  * remove `util.make_endian()`, use `bitarray(..., endian=...)` instead,
    deprecated since 2.9
  * remove hackish support for `bitarray()` handling unpickling,
    see detailed explaination in #207 - closes #206


2024-10-10   2.9.3:
-------------------
  * add official Python 3.13 support
  * update cibuildwheel to 2.21.3
  * minor simplifications
  * fix some typos


2024-01-01   2.9.2:
-------------------
  * optimize initialization from strings by not constantly resizing buffer
  * optimize `util.hex2ba()` and `util.base2ba()` by avoiding unnecessary
    copies
  * optimize `util.base2ba()` and `util.ba2base()` for `n=16` (hexadecimal)


2023-12-23   2.9.1:
-------------------
  * avoid buffer being unnecessarily initialized with 0s in several
    functions of the `bitarray.util` module
  * fix `.count()` type hint in pyi-file
  * improve testing


2023-12-17   2.9.0:
-------------------
  * deprecate support for Python 2 - Python 2.7 support will be removed
    in bitarray version 3.0,
    see [roadmap](https://github.com/ilanschnell/bitarray#roadmap)
  * `bitarray(n)` for integer initializer `n` will always return a bitarray
    of length `n` with all items initialized to `0`, see #212
  * allow sub-bitarray in `.count()`, #212
  * add `util.ones()`
  * `.find()` and `.index()`: add keyword argument `right` for rightmost index