@@ -5,7 +5,16 @@ from test_resize import get_alloc, show
 
 a = bitarray()
 prev = -1
-while len(a) < 2_000:
+while len(a) < 19_000_000:
+    alloc = get_alloc(a)
+    if prev != alloc:
+        show(a)
+    prev = alloc
+    a.extend(bitarray(8 * 65536))
+
+a = bitarray()
+prev = -1
+while len(a) < 1_000:
     alloc = get_alloc(a)
     if prev != alloc:
         show(a)
@@ -28,3 +37,8 @@ while len(a):
     a.pop()
 
 show(a)
+
+for nbits in range(0, 100, 8):
+    a = bitarray()
+    a.extend(bitarray(nbits))
+    show(a)
