@@ -1,7 +1,8 @@
-2024-XX-XX   3.1.0:
+2025-XX-XX   3.1.0:
 -------------------
   * allow mask assignment to bitarrays, see #225
   * add missing masked operations to pyi-file
+  * make `resize()` more readable
   * fix some typos
   * minor simplifications
   * update gene example
